--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
-  "name": "pz-1-8",
+  "name": "new__template",
   "version": "1.0.0",
-  "description": "\"# pz-1-8\"",
-  "main": "index.js",
+  "description": "",
+  "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Group282/pz-1-8.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Group282/pz-1-8/issues"
+  "dependencies": {
+    "gulp": "^4.0.2"
   },
-  "homepage": "https://github.com/Group282/pz-1-8#readme"
+  "devDependencies": {
+    "browser-sync": "^2.27.7",
+    "del": "^6.0.0",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-file-include": "^2.3.0",
+    "gulp-group-css-media-queries": "^1.2.2",
+    "gulp-imagemin": "^7.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.0.0",
+    "gulp-uglify-es": "^3.0.0",
+    "sass": "^1.43.5"
+  }
 }
