--- a/package.json
+++ b/package.json
@@ -4,16 +4,36 @@
   "description": "\"# pz-1-8\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "gulp default",
+    "prod": "gulp build"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Group282/pz-1-8.git"
   },
-  "author": "",
+  "author": "Bakhtiyarov Kyrylo",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Group282/pz-1-8/issues"
   },
-  "homepage": "https://github.com/Group282/pz-1-8#readme"
+  "homepage": "https://github.com/Group282/pz-1-8#readme",
+  "devDependencies": {
+    "browser-sync": "^2.27.5",
+    "del": "^6.0.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-cache": "^1.1.3",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-imagemin": "7.1.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.0.0",
+    "gulp-uglifyjs": "^0.6.2",
+    "imagemin-pngquant": "^9.0.2",
+    "sass": "^1.41.1"
+  },
+  "dependencies": {
+    "array-sort": "^1.0.0"
+  }
 }
