--- a/package.json
+++ b/package.json
@@ -15,5 +15,27 @@
   "bugs": {
     "url": "https://github.com/Group282/pz-1-8/issues"
   },
-  "homepage": "https://github.com/Group282/pz-1-8#readme"
+  "homepage": "https://github.com/Group282/pz-1-8#readme",
+  "devDependencies": {
+    "browser-sync": "^2.29.3",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-sass-bulk-importer": "^3.0.2",
+    "gulp-sourcemaps": "^3.0.0",
+    "require-dir": "^1.2.0"
+  },
+  "dependencies": {
+    "clean-css": "^5.3.2",
+    "del": "^7.1.0",
+    "gulp-cache": "^1.1.3",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-imagemin": "^8.0.0",
+    "gulp-uglifyjs": "^0.6.2",
+    "imagemin-pngquant": "^9.0.2",
+    "sass": "^1.68.0"
+  }
 }
